# fasttext_summary_prob

./: Cargo.toml  config.toml
migrations/2023-01-24-221723_create_messages/: up.sql
migrations/2023-01-24-221849_create_summary_probs/: down.sql  up.sql
migrations/2023-01-25-213355_constraint_prob/: down.sql  up.sql
src/: config.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
